# YoloEats

./: .gitignore  README.md  docker-compose.yaml
apps/allergy-checker-service/: Cargo.toml
apps/allergy-checker-service/src/: errors.rs  handlers.rs  main.rs  models.rs  state.rs
apps/product-catalog-service/: Cargo.toml
apps/product-catalog-service/src/: db_setup.rs  errors.rs  handlers.rs  main.rs  models.rs  state.rs
apps/user-profile-service/: Cargo.toml
apps/user-profile-service/src/: errors.rs  handlers.rs  main.rs  models.rs  state.rs
apps/yoloeats_app/: README.md  pubspec.yaml
apps/yoloeats_app/android/app/: build.gradle.kts
apps/yoloeats_app/assets/: labels.txt
apps/yoloeats_app/ios/Runner/: Info.plist
apps/yoloeats_app/ios/Runner.xcodeproj/: project.pbxproj
apps/yoloeats_app/lib/: main.dart
apps/yoloeats_app/lib/data/local/: product_local_data_source.dart  user_profile_local_data_source.dart
apps/yoloeats_app/lib/data/remote/: allergy_checker_api_service.dart  product_api_service.dart  user_profile_api_service.dart
apps/yoloeats_app/lib/models/: allergen_info.dart  allergen_info.g.dart  check_result.dart  product.dart  product.g.dart  product_info.dart  product_info.g.dart  user_profile.dart  user_profile.g.dart
apps/yoloeats_app/lib/providers/: allergy_check_providers.dart  api_service_providers.dart  auth_providers.dart  barcode_processor_provider.dart  camera_providers.dart  data_source_providers.dart  ml_providers.dart  ocr_providers.dart  product_providers.dart  repository_providers.dart  search_providers.dart  service_providers.dart  user_profile_providers.dart
apps/yoloeats_app/lib/services/: ocr_service.dart  offline_allergy_checker_service.dart  tflite_service.dart
apps/yoloeats_app/lib/views/: main_shell.dart
apps/yoloeats_app/linux/: CMakeLists.txt
apps/yoloeats_app/linux/runner/: my_application.cc
apps/yoloeats_app/macos/Runner.xcodeproj/: project.pbxproj
apps/yoloeats_app/test/: widget_test.dart
apps/yoloeats_app/web/: index.html  manifest.json
apps/yoloeats_app/windows/: CMakeLists.txt
apps/yoloeats_app/windows/runner/: Runner.rc  main.cpp
libs/rust-database-clients/: Cargo.toml
libs/rust-database-clients/src/: lib.rs
scripts/mongo_x_neo4j/: .gitignore  bulk_import.cypher  neo4j_relationalizer.py
scripts/qdrant_embeddings/: requirements.txt  vectorize_products.py
(+16 files in other folders)
