[package]
name = "product-catalog-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
bson = { version = "2.14.0", features = ["chrono-0_4", "serde_with"] }
chrono = "0.4.40"
dotenvy = "0.15.7"
lapin = "2.5.3"
mongodb = "3.2.3"
redis = { version = "0.29.5", features = ["tokio-comp"] }
rust-database-clients = { version = "0.1.0", path = "../../libs/rust-database-clients" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tokio-amqp = "2.0.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
validator = { version = "0.20.0", features = ["derive"] }
futures = "0.3.31"
tower-http = { version = "0.6.2", features = ["cors"] }
qdrant-client = "1.14.0"
neo4rs = "0.8.0"
reqwest = { version = "0.12.15", features = ["json"] }
uuid = { version = "1.16.0", features = ["v5"] }
