[package]
name = "user-profile-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
bson = { version = "2.14.0", features = ["serde_with", "chrono-0_4"] }
dotenvy = "0.15.7"
mongodb = "3.2.3"
redis = { version = "0.29.5", features = ["tokio-comp"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
rust-database-clients = { path = "../../libs/rust-database-clients" }
validator = { version = "0.20.0", features = ["derive"] }
chrono = "0.4.40"
tower-http = { version = "0.6.2", features = ["cors"] }
